# minigrep

./: .gitignore  Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
src/: main.rs
