[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
console = "0.15.8"
config = { version = "0.1.0", path = "crates/config" }

[[bin]]
path = "src/main.rs"
name = "minigrep"


workspace = { members = ["main", "crates/config"] }

